@@ -62,8 +62,10 @@ libdw_a_SOURCES = dwarf_begin.c dwarf_begin_elf.c dwarf_end.c dwarf_getelf.c \
 		  dwarf_macro_param2.c dwarf_addrdie.c \
 		  dwarf_getfuncs.c dwarf_func_name.c dwarf_func_lowpc.c \
 		  dwarf_func_highpc.c dwarf_func_entrypc.c dwarf_func_file.c \
-		  dwarf_func_line.c dwarf_func_col.c dwarf_getsrc_file.c \
-		  libdw_findcu.c libdw_form.c libdw_alloc.c memory-access.c
+		  dwarf_func_line.c dwarf_func_col.c dwarf_func_die.c \
+		  dwarf_func_inline.c dwarf_getsrc_file.c \
+		  libdw_findcu.c libdw_form.c libdw_alloc.c memory-access.c \
+		  libdw_visit_scopes.c
 
 
 if !MUDFLAP
